          the :file tag.

        * BUGFIX: Using an unopened filehandle in an autodying
          built-in no longer triggers a spurious warning.

        * BUGFIX: RT #38845, corrected a missing space in the error
          produced by autodie when called with the ':void' switch.
          Many thanks to Matt Kraai for the patch!

        * DOCUMENTATION: The :filesys tag is properly documented.

        * DOCUMENTATION: Added link to Perl tip on autodie.

        * TEST: RT #38845, t/internal.t updated to detect malformed error
          messages involving the mixing of ':void' and autodie.

1.991 Fri Aug 22 23:57:24 AUSEST 2008

        * BUGFIX: RT #38614, stringified autodie::exceptions objects
          now always end with a newline.  Thanks to Offer Kaye for the
          report.

        * BUGFIX: Makefile.PL is no longer executable.

        * BUGFIX: 'chdir' added to defaults, and the :filesys group.

        * BUGFIX: RT #38598, the errno attribute on autodie::exception
          objects is now correctly set.

        * BUGFIX: RT #38066, exceptions from system() now report
          the correct line number.

        * TEST: Internal tests changes to ease integration with core.

        * TEST: Checks added for empty 'errno' string in basic_exceptions.t

        * TEST: Errors should end with a newline.

        * TEST: fork tests should no longer mysteriously fail
          on Solaris.

        * TEST: backcompat.t should no longer give strange failures on
          old versions of 5.8.3 or earlier.

        * TEST: system.t ensures the correct file is reported.

        * BUILD: Upgrade to Module::Install 0.75

1.99 Mon Jul 21 02:25:23 PDT 2008

        * RELEASE CODENAME: "jarich", in thanks for her giving
          up pretty much a whole week of her life to do nothing
          but help me work on my talks for OSCON.

        * BUGFIX: autodie will now check open() for returning
          undef, not merely false, as open() can legimiately