@@ -25,6 +25,7 @@ t/boilerplate.t
 t/context.t
 t/context_lexical.t
 t/crickey.t
+t/dbmopen.t
 t/exceptions.t
 t/exec.t
 t/Fatal.t
